--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "blaupunkt",
   "private": true,
   "version": "0.0.0",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -12,7 +13,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.16.0",
+    "jszip": "^3.10.1",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
