--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-# Email Configuration
-SMTP_HOST=mail.blaupunkt-ev.com
-SMTP_PORT=587
-SMTP_USER=contact@blaupunkt-ev.com
-SMTP_PASS=your-email-password
-DESTINATION_EMAIL=contact@blaupunkt-ev.com
+# Frontend Environment Variables
+
+# API Backend URL
+# Local development: Leave empty (uses Vite proxy to localhost:5000)
+# Production: Set to your deployed backend URL
+VITE_API_URL=
+
+# Production example:
+# VITE_API_URL=https://blaupunkt-backend.onrender.com
