Fix: Update production backend URL to Render

--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@
 # Note: NODE_ENV is automatically set by Vite, don't include it here
 
 VITE_APP_NAME=Blaupunkt
-VITE_API_URL=https://your-domain.com/api
+VITE_API_URL=https://blaupunkt-backend.onrender.com
 VITE_CONTACT_EMAIL=info@blaupunkt-ev.com
 
 # SMTP Configuration for production
