Ready for Render deployment

--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,11 @@
-# Production Environment Variables for Hostinger
-# Add these in Hostinger hPanel -> Git -> Environment Variables
-# Note: NODE_ENV is automatically set by Vite, don't include it here
+# Production Environment Variables for Render Deployment
 
-VITE_APP_NAME=Blaupunkt
+# Backend API URL (Update this after deploying backend to Render)
 VITE_API_URL=https://blaupunkt-backend.onrender.com
+
+# App Configuration
+VITE_APP_NAME=Blaupunkt EV
 VITE_CONTACT_EMAIL=info@blaupunkt-ev.com
 
-# SMTP Configuration for production
-SMTP_HOST=smtp.blaupunkt-ev.com
-SMTP_PORT=587
-SMTP_USER=noreply@blaupunkt-ev.com
-SMTP_PASS=your-smtp-password
-
-# Optional: Add your actual domain
-VITE_DOMAIN=https://your-domain.com
+# Your domain (update after setting up custom domain)
+VITE_DOMAIN=https://blaupunkt-frontend.onrender.com
