Configure for backend-only Render deployment (frontend on Hostinger)
- Updated render.yaml: removed frontend service, only backend
- Enhanced CORS: allow requests from blaupunkt-ev.com (Hostinger)
- Updated .env.production: point to Hostinger domain
- Added BACKEND_ONLY_RENDER.md: deployment guide for this setup
- VITE_DOMAIN now points to https://blaupunkt-ev.com

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-# Production Environment Variables for Render Deployment
+# Production Environment Variables
+# Frontend is hosted on Hostinger, only backend on Render
 
 # Backend API URL (Update this after deploying backend to Render)
 VITE_API_URL=https://blaupunkt-backend.onrender.com
@@ -7,5 +8,5 @@ VITE_API_URL=https://blaupunkt-backend.onrender.com
 VITE_APP_NAME=Blaupunkt EV
 VITE_CONTACT_EMAIL=info@blaupunkt-ev.com
 
-# Your domain (update after setting up custom domain)
-VITE_DOMAIN=https://blaupunkt-frontend.onrender.com
+# Frontend Domain (Hostinger)
+VITE_DOMAIN=https://blaupunkt-ev.com
