--- a/render.yaml
+++ b/render.yaml
@@ -17,9 +17,9 @@ services:
       - key: SMTP_PORT
         value: 465
       - key: SMTP_USER
-        sync: false  # Set this manually in Render dashboard
+        value: info@blaupunkt-ev.com
       - key: SMTP_PASS
-        sync: false  # Set this manually in Render dashboard
+        sync: false  # SECURITY: Set this manually in Render dashboard to Mail@Blaupunkt123
       - key: DESTINATION_EMAIL
         value: info@blaupunkt-ev.com
       - key: PORT
