Remove outdated scripts and implement new email service with Resend integration
- Deleted legacy scripts for testing, building, and starting the backend and frontend.
- Introduced a new EmailService class to handle email sending using Resend API.
- Added email templates for contact form submissions in HTML and plain text formats.
- Updated Vite configuration to point to the correct backend URL for API requests.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,23 @@
-# Frontend Environment Variables
+# Environment Variables Example
+# Copy this file to .env for local development
 
-# API Backend URL
-# Local development: Leave empty (uses Vite proxy to localhost:5000)
-# Production: Set to your deployed backend URL
-VITE_API_URL=
+# Backend API URL
+# For local development, use your local backend server
+VITE_API_URL=http://localhost:5000
 
-# Production example:
-# VITE_API_URL=https://blaupunkt-backend.onrender.com
+# Resend API Configuration
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=your_resend_api_key_here
+
+# Email Configuration
+# FROM_EMAIL must be a verified domain in Resend
+FROM_EMAIL=onboarding@resend.dev
+# TO_EMAIL is where contact form submissions will be sent
+TO_EMAIL=your-email@example.com
+
+# Server Configuration
+PORT=5000
+NODE_ENV=development
+
+# CORS Configuration (Frontend URL)
+FRONTEND_URL=http://localhost:5173
