--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,17 @@
-# Production Environment Variables
-# Frontend is hosted on Hostinger, only backend on Render
 
-# Backend API URL (Update this after deploying backend to Render)
-VITE_API_URL=https://blaupunkt-backend.onrender.com
+# Resend API Configuration (for backend on Render)
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=your_production_resend_api_key_here
 
-# App Configuration
-VITE_APP_NAME=Blaupunkt EV
-VITE_CONTACT_EMAIL=info@blaupunkt-ev.com
+# Email Configuration
+# FROM_EMAIL must be a verified domain in Resend
+FROM_EMAIL=noreply@blaupunkt-ev.com
+# TO_EMAIL is where contact form submissions will be sent
+TO_EMAIL=info@blaupunkt-ev.com
 
-# Frontend Domain (Hostinger)
-VITE_DOMAIN=https://blaupunkt-ev.com
+# Server Configuration
+PORT=5000
+NODE_ENV=production
+
+# CORS Configuration (Frontend URL)
+FRONTEND_URL=https://blaupunkt-ev.com
