--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,8 @@
 # Environment Variables Example
 # Copy this file to .env for local development
 
-# Backend API URL
-# For local development, use your local backend server
-VITE_API_URL=http://localhost:5000
+# Note: With PHP backend, most environment variables are not needed
+# The PHP API handles email configuration directly
 
-# Resend API Configuration
-# Get your API key from: https://resend.com/api-keys
-RESEND_API_KEY=your_resend_api_key_here
-
-# Email Configuration
-# FROM_EMAIL must be a verified domain in Resend
-FROM_EMAIL=onboarding@resend.dev
-# TO_EMAIL is where contact form submissions will be sent
-TO_EMAIL=your-email@example.com
-
-# Server Configuration
-PORT=5000
-NODE_ENV=development
-
-# CORS Configuration (Frontend URL)
-FRONTEND_URL=http://localhost:5173
+# Optional: Backend API URL (only if using a different domain)
+# VITE_API_URL=https://blaupunkt-ev.com
